tests/integration/formats/gcc/check-color.txt
tests/integration/formats/sample.cs:1:1: error: class found
1 >| ЁЯЯжpublic class ЁЯЯжтмЬFooтмЬ
2  | ЁЯЯж{ЁЯЯж
3  | ЁЯЯж    public ЁЯЯжЁЯЯкintЁЯЯкЁЯЯж ЁЯЯжтмЬBarтмЬЁЯЯж { get; set; }ЁЯЯж
4  | ЁЯЯж    publicЁЯЯжЁЯЯк void ЁЯЯктмЬBazтмЬЁЯЯк() { }ЁЯЯк
5 >| ЁЯЯж}ЁЯЯж

tests/integration/formats/sample.cs:7:1: error: class found
7 | ЁЯЯжpublic class ЁЯЯжтмЬQuxтмЬЁЯЯж { }ЁЯЯж
    ^~~~~~~~~~~~~~~~~~~~

2 errors in 1 file
